# alks-society

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
res/: map.txt
src/: color.hpp  interface.cpp  interface.hpp  main.cpp  map.cpp  map.hpp  player.cpp  player.hpp  screen.cpp  screen.hpp
